# content_automator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  path_walker.py  pyproject.toml  requirements.txt
docs/: CONTRIBUTING.md  README.md
src/content_automator/: __init__.py  main.py
src/content_automator/config/: settings.py
src/content_automator/core/: metadata.py  processor.py  transcribe.py  upload.py
src/content_automator/models/: processing.py  validation.py
src/content_automator/utils/: logging.py  setup.py
